# confluence-extractor

./: .gitignore  README.md  pyproject.toml
confluence_extractor/: README.md  config.py  confluence2md.xsl  confluence2phtml.xsl  doc_constructor.py  doc_content.py  md2any.py  page.py  page_extractor.py  xml2md.py
examples/: .gitignore  1000000.storage.html  example_confluence_extractor.cfg  reference.docx  test_html2docx.py  test_xml2md.py
examples/doc-templates/: example_Architecture_template.md  example_Maintenance_template.md
examples/extract/: .gitignore  1000000.storage.docx  1000000.storage.html  1000000.storage.md  257815984.storage.html  257815984.storage.md  262826365.storage.html  262826365.storage.md  262826368.storage.html  262826368.storage.md  262826370.storage.html  262826370.storage.md  262826372.storage.html  262826372.storage.md  262826374.storage.html  262826374.storage.md  example architecture  example.drawio
examples/results/: Architecture.docx  Architecture.md  Maintenance.docx  Maintenance.md
examples/scripts/: convert_pages.py  extract_pages.py  template_to_doc.py
src/: config.py  doc_constructor.py  md2any.py  page.py  page_extractor.py  xml2md.py
