[tool.poetry]
name = "confluence_extractor"
version = "0.1.0"
description = "extract confluence pages and compose a document from them"
authors = [ "Wouter Geurts <wouter.geurts@gmail.com>" ]

license = "MIT"
readme = "README.md"
packages = [{include = "confluence_extractor"}]

[tool.poetry.dependencies]
python = "^3.11"
pypandoc = "^1.14"
pypandoc_binary = "^1.13"
lxml = "^5.3.1"
atlassian-python-api = "^4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
